--- a/src/main/webapp/app/features/blog/profile/profile.component.html
+++ b/src/main/webapp/app/features/blog/profile/profile.component.html
@@ -8,7 +8,7 @@
                     <img [src]="profile.image" class="user-img" />
                     <h4>{{ profile.username }}</h4>
                     <p>{{ profile.bio }}</p>
-                    <jhi-follow-button [hidden]="isUser" [profile]="profile" (onToggle)="onToggleFollowing($event)">
+                    <jhi-follow-button [hidden]="isUser" [profile]="profile">
                     </jhi-follow-button>
                     <a [routerLink]="['/settings']" [hidden]="!isUser" class="btn btn-sm btn-outline-secondary action-btn">
               <i class="ion-gear-a"></i> Edit Profile Settings
