--- a/src/main/webapp/app/features/blog/shared/article-preview/article-preview.component.html
+++ b/src/main/webapp/app/features/blog/shared/article-preview/article-preview.component.html
@@ -1,18 +1,18 @@
 <div class="jhi-article-preview">
-  <article-meta [article]="article">
-    <favorite-button [article]="article" (onToggle)="onToggleFavorite($event)" class="pull-xs-right">
-      {{article.favoritesCount}}
-    </favorite-button>
-  </article-meta>
+    <article-meta [article]="article">
+        <jhi-favorite-button [article]="article" class="pull-xs-right">
+            {{article.favoritesCount}}
+        </jhi-favorite-button>
+    </article-meta>
 
-  <a [routerLink]="['/article', article.slug]" class="preview-link">
-    <h1>{{ article.title }}</h1>
-    <p>{{ article.description }}</p>
-    <span>Read more...</span>
-    <ul class="tag-list">
-      <li class="tag-default tag-pill tag-outline" *ngFor="let tag of article.tagList">
-        {{ tag }}
-      </li>
-    </ul>
-  </a>
+    <a [routerLink]="['/article', article.slug]" class="preview-link">
+        <h1>{{ article.title }}</h1>
+        <p>{{ article.description }}</p>
+        <span>Read more...</span>
+        <ul class="tag-list">
+            <li class="tag-default tag-pill tag-outline" *ngFor="let tag of article.tagList">
+                {{ tag }}
+            </li>
+        </ul>
+    </a>
 </div>
