--- a/src/main/webapp/app/entities/user-custom/user-custom.component.html
+++ b/src/main/webapp/app/entities/user-custom/user-custom.component.html
@@ -32,6 +32,7 @@
             <th><span jhiTranslate="global.field.id">ID</span></th>
             <th><span jhiTranslate="greatBigExampleApplicationApp.userCustom.bio">Bio</span></th>
             <th><span jhiTranslate="greatBigExampleApplicationApp.userCustom.user">User</span></th>
+            <th><span jhiTranslate="greatBigExampleApplicationApp.userCustom.follower">Follower</span></th>
             <th></th>
             </tr>
             </thead>
@@ -41,6 +42,11 @@
                 <td>{{userCustom.bio}}</td>
                 <td>
                     {{userCustom.user?.id}}
+                </td>
+                <td>
+                    <span *ngFor="let follower of userCustom.followers; let last = last">
+                            <a class="form-control-static" [routerLink]="['../user-custom', follower?.id ]">{{follower.id}}</a>{{last ? '' : ', '}}
+                        </span>
                 </td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
