--- a/src/main/webapp/app/entities/user-custom/user-custom-dialog.component.html
+++ b/src/main/webapp/app/entities/user-custom/user-custom-dialog.component.html
@@ -25,6 +25,12 @@
                 <option [ngValue]="userOption.id === userCustom.user?.id ? userCustom.user : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.id}}</option>
             </select>
         </div>
+        <div class="form-group">
+            <label jhiTranslate="greatBigExampleApplicationApp.userCustom.follower" for="field_follower">Follower</label>
+            <select class="form-control" id="field_follower" multiple name="follower" [(ngModel)]="userCustom.followers">
+                <option [ngValue]="getSelected(userCustom.followers, userCustomOption)" *ngFor="let userCustomOption of usercustoms; trackBy: trackUserCustomById">{{userCustomOption.id}}</option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
