--- a/src/main/webapp/app/entities/comment/comment-detail.component.html
+++ b/src/main/webapp/app/entities/comment/comment-detail.component.html
@@ -25,7 +25,7 @@
         <dt><span jhiTranslate="greatBigExampleApplicationApp.comment.author">Author</span></dt>
         <dd>
             <div *ngIf="comment.author">
-                <a [routerLink]="['/user-custom', comment.author?.id]">{{comment.author?.id}}</a>
+                <a [routerLink]="['/author', comment.author?.id]">{{comment.author?.id}}</a>
             </div>
         </dd>
     </dl>
