--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -116,9 +116,9 @@
                         </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" routerLink="user-custom" routerLinkActive="active" (click)="collapseNavbar()">
+                            <a class="dropdown-item" routerLink="author" routerLinkActive="active" (click)="collapseNavbar()">
                             <i class="fa fa-fw fa-asterisk" aria-hidden="true"></i>
-                            <span jhiTranslate="global.menu.entities.userCustom">User Custom</span>
+                            <span jhiTranslate="global.menu.entities.author">User Custom</span>
                         </a>
                         </li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
