--- a/src/main/webapp/app/entities/article/article-dialog.component.html
+++ b/src/main/webapp/app/entities/article/article-dialog.component.html
@@ -101,7 +101,7 @@
             <label jhiTranslate="greatBigExampleApplicationApp.article.author" for="field_author">Author</label>
             <select class="form-control" id="field_author" name="author" [(ngModel)]="article.author" >
                 <option [ngValue]="null"></option>
-                <option [ngValue]="userCustomOption.id === article.author?.id ? article.author : userCustomOption" *ngFor="let userCustomOption of usercustoms; trackBy: trackUserCustomById">{{userCustomOption.login}}</option>
+                <option [ngValue]="userCustomOption.id === article.author?.id ? article.author : userCustomOption" *ngFor="let userCustomOption of usercustoms; trackBy: trackAuthorById">{{userCustomOption.login}}</option>
             </select>
         </div>
     </div>
