--- a/src/main/webapp/app/entities/article/article.component.html
+++ b/src/main/webapp/app/entities/article/article.component.html
@@ -51,7 +51,7 @@
                 <td>{{article.updatedAt | date:'medium'}}</td>
                 <td>
                     <div *ngIf="article.author">
-                        <a [routerLink]="['../user-custom', article.author?.id ]" >{{article.author?.login}}</a>
+                        <a [routerLink]="['../author', article.author?.id ]" >{{article.author?.login}}</a>
                     </div>
                 </td>
                 <td class="text-right">
