--- a/src/main/webapp/app/entities/author/author-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/author/author-delete-dialog.component.html
@@ -1,4 +1,4 @@
-<form name="deleteForm" (ngSubmit)="confirmDelete(userCustom.id)">
+<form name="deleteForm" (ngSubmit)="confirmDelete(author.id)">
     <div class="modal-header">
         <h4 class="modal-title" jhiTranslate="entity.delete.title">Confirm delete operation</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p jhiTranslate="greatBigExampleApplicationApp.userCustom.delete.question" translateValues="{id: '{{userCustom.id}}'}">Are you sure you want to delete this User Custom?</p>
+        <p jhiTranslate="greatBigExampleApplicationApp.author.delete.question" translateValues="{id: '{{author.id}}'}">Are you sure you want to delete this User Custom?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
