--- a/src/main/webapp/app/entities/author/author.component.html
+++ b/src/main/webapp/app/entities/author/author.component.html
@@ -1,9 +1,9 @@
 <div>
     <h2>
-        <span jhiTranslate="greatBigExampleApplicationApp.userCustom.home.title">User Customs</span>
-        <button class="btn btn-primary float-right create-user-custom" [routerLink]="['/', { outlets: { popup: ['user-custom-new'] } }]">
+        <span jhiTranslate="greatBigExampleApplicationApp.author.home.title">User Customs</span>
+        <button class="btn btn-primary float-right create-author" [routerLink]="['/', { outlets: { popup: ['author-new'] } }]">
             <span class="fa fa-plus"></span>
-            <span class="hidden-sm-down"  jhiTranslate="greatBigExampleApplicationApp.userCustom.home.createLabel">
+            <span class="hidden-sm-down"  jhiTranslate="greatBigExampleApplicationApp.author.home.createLabel">
             Create new User Custom
             </span>
         </button>
@@ -13,7 +13,7 @@
         <div class="col-sm-12">
             <form name="searchForm" class="form-inline">
                 <div class="input-group w-100 mt-3">
-                    <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'greatBigExampleApplicationApp.userCustom.home.search' | translate }}">
+                    <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'greatBigExampleApplicationApp.author.home.search' | translate }}">
                     <button class="input-group-addon btn btn-info" (click)="search(currentSearch)">
                         <span class="fa fa-search"></span>
                     </button>
@@ -30,49 +30,49 @@
             <thead>
             <tr>
             <th><span jhiTranslate="global.field.id">ID</span></th>
-            <th><span jhiTranslate="greatBigExampleApplicationApp.userCustom.login">Login</span></th>
-            <th><span jhiTranslate="greatBigExampleApplicationApp.userCustom.bio">Bio</span></th>
-            <th><span jhiTranslate="greatBigExampleApplicationApp.userCustom.user">User</span></th>
-            <th><span jhiTranslate="greatBigExampleApplicationApp.userCustom.follower">Follower</span></th>
-            <th><span jhiTranslate="greatBigExampleApplicationApp.userCustom.favorite">Favorite</span></th>
+            <th><span jhiTranslate="greatBigExampleApplicationApp.author.login">Login</span></th>
+            <th><span jhiTranslate="greatBigExampleApplicationApp.author.bio">Bio</span></th>
+            <th><span jhiTranslate="greatBigExampleApplicationApp.author.user">User</span></th>
+            <th><span jhiTranslate="greatBigExampleApplicationApp.author.follower">Follower</span></th>
+            <th><span jhiTranslate="greatBigExampleApplicationApp.author.favorite">Favorite</span></th>
             <th></th>
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let userCustom of userCustoms ;trackBy: trackId">
-                <td><a [routerLink]="['../user-custom', userCustom.id ]">{{userCustom.id}}</a></td>
-                <td>{{userCustom.login}}</td>
-                <td>{{userCustom.bio}}</td>
+            <tr *ngFor="let author of userCustoms ;trackBy: trackId">
+                <td><a [routerLink]="['../author', author.id ]">{{author.id}}</a></td>
+                <td>{{author.login}}</td>
+                <td>{{author.bio}}</td>
                 <td>
-                    {{userCustom.user?.login}}
+                    {{author.user?.login}}
                 </td>
                 <td>
-                    <span *ngFor="let follower of userCustom.followers; let last = last">
-                            <a class="form-control-static" [routerLink]="['../user-custom', follower?.id ]">{{follower.id}}</a>{{last ? '' : ', '}}
+                    <span *ngFor="let follower of author.followers; let last = last">
+                            <a class="form-control-static" [routerLink]="['../author', follower?.id ]">{{follower.id}}</a>{{last ? '' : ', '}}
                         </span>
                 </td>
                 <td>
-                    <span *ngFor="let favorite of userCustom.favorites; let last = last">
+                    <span *ngFor="let favorite of author.favorites; let last = last">
                             <a class="form-control-static" [routerLink]="['../article', favorite?.id ]">{{favorite.id}}</a>{{last ? '' : ', '}}
                         </span>
                 </td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
-                                [routerLink]="['../user-custom', userCustom.id ]"
+                                [routerLink]="['../author', author.id ]"
                                 class="btn btn-info btn-sm">
                             <span class="fa fa-eye"></span>
                             <span class="hidden-md-down" jhiTranslate="entity.action.view">View</span>
                         </button>
                         <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'user-custom/'+ userCustom.id + '/edit'} }]"
+                                [routerLink]="['/', { outlets: { popup: 'author/'+ author.id + '/edit'} }]"
                                 replaceUrl="true"
                                 class="btn btn-primary btn-sm">
                             <span class="fa fa-pencil"></span>
                             <span class="hidden-md-down" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
                         <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'user-custom/'+ userCustom.id + '/delete'} }]"
+                                [routerLink]="['/', { outlets: { popup: 'author/'+ author.id + '/delete'} }]"
                                 replaceUrl="true"
                                 class="btn btn-danger btn-sm">
                             <span class="fa fa-remove"></span>
