--- a/src/main/webapp/app/features/meals/home/filter/filter.component.scss
+++ b/src/main/webapp/app/features/meals/home/filter/filter.component.scss
@@ -80,7 +80,7 @@ $spacing: 15px;
       margin: 5px auto;
       width: 90%;
 
-      app-button-clear {
+      meals-button-clear {
         padding: 5px;
       }
     }
