--- a/src/main/webapp/app/features/meals/recipe/timer-button/timer-button.component.scss
+++ b/src/main/webapp/app/features/meals/recipe/timer-button/timer-button.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../theme/sass/conf/conf';
 
-app-button-clear {
+meals-button-clear {
   color: $link-color;
   padding: 0 4px;
 }
