--- a/src/main/webapp/app/features/meals/timer/timer.component.scss
+++ b/src/main/webapp/app/features/meals/timer/timer.component.scss
@@ -39,7 +39,7 @@ $timer-green: #008000;
     align-items: center;
     display: flex;
 
-    app-button-clear {
+    meals-button-clear {
       display: flex;
       font-size: $icon-size;
     }
