--- a/src/main/webapp/app/features/meals/home/recipe-ad/recipe-ad.component.html
+++ b/src/main/webapp/app/features/meals/home/recipe-ad/recipe-ad.component.html
@@ -1,8 +1,10 @@
 <app-image-cover [src]="recipe.image" [alt]="recipe.title"></app-image-cover>
 <h2 class="recipe-title">{{recipe.title}}</h2>
 <ul class="allergens" aria-label="Allergy free items for this recipe">
-  <template ngFor let-allergen [ngForOf]="recipe.allergens" let-i="index">
+  <ng-template ngFor let-allergen [ngForOf]="recipe.allergens" let-i="index">
     <li *ngIf="i < 6" class="allergen">{{allergen}}</li>
-  </template>
+  </ng-template>
 </ul>
-<div class="recipe-blurb" >{{recipe.blurb}} <div  *ngIf="recipe.blurb" aria-hidden="true" [style.border-left-color]="arrowColor" class="arrow"></div></div>
+<div class="recipe-blurb">{{recipe.blurb}}
+  <div *ngIf="recipe.blurb" aria-hidden="true" [style.border-left-color]="arrowColor" class="arrow"></div>
+</div>
