--- a/src/main/webapp/app/features/meals/home/home.component.html
+++ b/src/main/webapp/app/features/meals/home/home.component.html
@@ -1,31 +1,31 @@
-<header class="fixed-content" appWatchHeight (heightChange)="fixedHeight = $event" [style.transition]="statusBarService.animate ? 'padding-top 1s' : null" [style.padding-top]="statusBarService.currentStatus.height + 'px'" >
-  <app-loading *ngIf="!(apiService.latest | async)"></app-loading>
-  <app-image-cover [src]="(apiService.latest | async)?.image" class="primary-image" [alt]="(apiService.latest | async)?.title"></app-image-cover>
-  <section class="primary-info">
-    <h1 class="title">{{ (apiService.latest | async)?.title }}</h1>
-    <div class="blurb">{{ (apiService.latest | async)?.blurb }} <a *ngIf="apiService.latest | async" [routerLink]="['/recipe', (apiService.latest | async)?.slug]" appAxFocus01Fix>View&nbsp;Recipe</a></div>
-    <app-labels (change)="wh.updateHeight()" [labels]="(apiService.latest | async)?.labels" label="Allergy free items for this recipe"></app-labels>
-  </section>
-</header>
-<div class="home-content" [style.transition]="statusBarService.animate ? 'margin-top 1s' : null" [style.margin-top]="(fixedHeight + statusBarService.currentStatus.height) + 'px'" >
-  <app-sticky-scroll #stickyScroll [stickyOffset]="fixedHeight">
-    <app-filter (change)="filterStamp = $event; onFilterUpdate(fixedHeight)" (update)="filterValues = $event" (drawerEvent)="stickyScroll.manualHeightCheck()" [filterItems]="(apiService.filterOptions | async)?.items"></app-filter>  
-  </app-sticky-scroll>
-  <div class="info-bar">
-    <h1>Let's get cookin'</h1>
-  </div>
-  <main class="recipes"
-    infinite-scroll
-    [infiniteScrollDistance]="2"
-    [infiniteScrollThrottle]="500"
-    (scrolled)="onScroll()">
-    <section *ngFor="let recipe of apiService.recipes | async | filter:filterStamp:filterValues:filteredMeta | limitTo:limit; let i = index" class="app-recipe-ad">
-      <a [routerLink]="['/recipe', recipe.slug]" class="recipe-link">
-        <app-recipe-ad [recipe]="recipe" [index]="i"></app-recipe-ad>
-      </a>
+<header class="fixed-content" appWatchHeight (heightChange)="fixedHeight = $event" [style.transition]="statusBarService.animate ? 'padding-top 1s' : null"
+    [style.padding-top]="statusBarService.currentStatus.height + 'px'">
+    <app-loading *ngIf="!(apiService.latest | async)"></app-loading>
+    <app-image-cover [src]="(apiService.latest | async)?.image" class="primary-image" [alt]="(apiService.latest | async)?.title"></app-image-cover>
+    <section class="primary-info">
+        <h1 class="title">{{ (apiService.latest | async)?.title }}</h1>
+        <div class="blurb">{{ (apiService.latest | async)?.blurb }} <a *ngIf="apiService.latest | async" [routerLink]="['/recipe', (apiService.latest | async)?.slug]"
+                appAxFocus01Fix>View&nbsp;Recipe</a></div>
+        <app-labels (change)="wh.updateHeight()" [labels]="(apiService.latest | async)?.labels" label="Allergy free items for this recipe"></app-labels>
     </section>
-    <div *ngIf="(apiService.recipes | async) !== undefined && filteredMeta?.count === 0" class="no-results">
-        No matches for {{filteredMeta.query}}
+</header>
+<div class="home-content" [style.transition]="statusBarService.animate ? 'margin-top 1s' : null" [style.margin-top]="(fixedHeight + statusBarService.currentStatus.height) + 'px'">
+    <app-sticky-scroll #stickyScroll [stickyOffset]="fixedHeight">
+        <app-filter (change)="filterStamp = $event; onFilterUpdate(fixedHeight)" (update)="filterValues = $event" (drawerEvent)="stickyScroll.manualHeightCheck()"
+            [filterItems]="(apiService.filterOptions | async)?.items"></app-filter>
+    </app-sticky-scroll>
+    <div class="info-bar">
+        <h1>Let's get cookin'</h1>
     </div>
-  </main>
+    <main class="recipes" infinite-scroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="500" (scrolled)="onScroll()">
+        <section *ngFor="let recipe of apiService.recipes | async | filter:filterStamp:filterValues:filteredMeta | limitTo:limit; let i = index"
+            class="app-recipe-ad">
+            <a [routerLink]="['/features/meals/recipe', recipe.slug]" class="recipe-link">
+                <app-recipe-ad [recipe]="recipe" [index]="i"></app-recipe-ad>
+            </a>
+        </section>
+        <div *ngIf="(apiService.recipes | async) !== undefined && filteredMeta?.count === 0" class="no-results">
+            No matches for {{filteredMeta.query}}
+        </div>
+    </main>
 </div>
