--- a/src/main/webapp/app/features/about/about.component.scss
+++ b/src/main/webapp/app/features/about/about.component.scss
@@ -28,7 +28,7 @@
       width: 90%;
     }
 
-    app-image-cover {
+    jhi-image-cover {
       border-radius: 50%;
       height: 100px;
       margin: 0 auto;
