--- a/src/main/webapp/app/features/meals/home/home.component.html
+++ b/src/main/webapp/app/features/meals/home/home.component.html
@@ -1,7 +1,7 @@
 <header class="fixed-content" appWatchHeight (heightChange)="fixedHeight = $event" [style.transition]="statusBarService.animate ? 'padding-top 1s' : null"
     [style.padding-top]="statusBarService.currentStatus.height + 'px'">
     <app-loading *ngIf="!(apiService.latest | async)"></app-loading>
-    <app-image-cover [src]="(apiService.latest | async)?.image" class="primary-image" [alt]="(apiService.latest | async)?.title"></app-image-cover>
+    <jhi-image-cover [src]="(apiService.latest | async)?.image" class="primary-image" [alt]="(apiService.latest | async)?.title"></jhi-image-cover>
     <section class="primary-info">
         <h1 class="title">{{ (apiService.latest | async)?.title }}</h1>
         <div class="blurb">{{ (apiService.latest | async)?.blurb }} <a *ngIf="apiService.latest | async" [routerLink]="['/recipe', (apiService.latest | async)?.slug]"
@@ -20,7 +20,7 @@
     <main class="recipes" infinite-scroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="500" (scrolled)="onScroll()">
         <section *ngFor="let recipe of apiService.recipes | async | filter:filterStamp:filterValues:filteredMeta | limitTo:limit; let i = index"
             class="app-recipe-ad">
-            <a [routerLink]="['/features/meals/recipe', recipe.slug]" class="recipe-link">
+            <a [routerLink]="['/meals/recipe', recipe.slug]" class="recipe-link">
                 <app-recipe-ad [recipe]="recipe" [index]="i"></app-recipe-ad>
             </a>
         </section>
