--- a/src/main/webapp/app/features/meals/recipe/recipe.component.scss
+++ b/src/main/webapp/app/features/meals/recipe/recipe.component.scss
@@ -41,7 +41,7 @@
       margin-left: 0;
     }
 
-    app-image-cover {
+    jhi-image-cover {
       height: 0;
       margin: 20px 0;
       padding-bottom: 50%;
