--- a/src/main/webapp/app/theme/theme.scss
+++ b/src/main/webapp/app/theme/theme.scss
@@ -1,3 +1,4 @@
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import 'sass/conf/conf';
 @import 'sass/bootstrap-overrides/overrides';
 @import '~animate.css/animate';
