--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -8,6 +8,6 @@
             <router-outlet></router-outlet>
             <router-outlet name="popup"></router-outlet>
         </div>
-        <jhi-footer></jhi-footer>
+        <jhi-footer appWatchHeight (heightChange)="onHeightChange('bottom', $event, 80)" appStatusBarAware></jhi-footer>
     </div>
 </main>
