--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -1,5 +1,6 @@
 // @import '../../app/theme/sass/conf/conf';
 @import '../../app/theme/theme';
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 /* ==============================================================
 Bootstrap tweaks
